--- a/Part-time job /Part-time job/View/Base.lproj/Main.storyboard
+++ b/Part-time job /Part-time job/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="C80-hP-MF3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IB6-Rg-d9t">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -14,7 +14,7 @@
         <!--Onboarding View Controller-->
         <scene sceneID="QF2-CL-DH9">
             <objects>
-                <viewController id="C80-hP-MF3" customClass="OnboardingViewController" customModule="Part_time_job" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HVC" id="C80-hP-MF3" customClass="OnboardingViewController" customModule="Part_time_job" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="r4E-gr-5tK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -36,8 +36,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="473"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="xhO-l4-Kly">
-                                                    <rect key="frame" x="16" y="383.5" width="343" height="73.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xhO-l4-Kly">
+                                                    <rect key="frame" x="16" y="391.5" width="343" height="65.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8l1-YH-hpa">
                                                             <rect key="frame" x="0.0" y="0.0" width="343" height="37"/>
@@ -46,14 +46,13 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xS1-gD-5Pf">
-                                                            <rect key="frame" x="0.0" y="53" width="343" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="45" width="343" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="xS1-gD-5Pf" firstAttribute="top" secondItem="8l1-YH-hpa" secondAttribute="bottom" constant="16" id="1gl-fc-Qk7"/>
                                                         <constraint firstAttribute="bottom" secondItem="xS1-gD-5Pf" secondAttribute="bottom" id="8vS-PG-X5s"/>
                                                         <constraint firstAttribute="bottom" secondItem="xS1-gD-5Pf" secondAttribute="bottom" id="Byp-AL-E3L"/>
                                                         <constraint firstItem="8l1-YH-hpa" firstAttribute="top" secondItem="xhO-l4-Kly" secondAttribute="top" id="COu-ya-HBT"/>
@@ -68,21 +67,22 @@
                                                         <constraint firstItem="xS1-gD-5Pf" firstAttribute="leading" secondItem="xhO-l4-Kly" secondAttribute="leading" id="weg-pY-dJb"/>
                                                     </constraints>
                                                 </stackView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LSP-Pj-DSo">
-                                                    <rect key="frame" x="16" y="0.0" width="349" height="376"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LSP-Pj-DSo">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="390"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="376" id="9bH-qx-gim"/>
+                                                        <constraint firstAttribute="height" constant="390" id="S9s-Yw-2BN"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="LSP-Pj-DSo" firstAttribute="leading" secondItem="CTR-dz-dc0" secondAttribute="leading" constant="16" id="CPv-LI-aOD"/>
+                                                <constraint firstAttribute="trailing" secondItem="LSP-Pj-DSo" secondAttribute="trailing" id="3Lq-eW-Yjj"/>
                                                 <constraint firstItem="xhO-l4-Kly" firstAttribute="leading" secondItem="CTR-dz-dc0" secondAttribute="leading" constant="16" id="DBP-Ig-Rhe"/>
+                                                <constraint firstItem="xhO-l4-Kly" firstAttribute="centerX" secondItem="LSP-Pj-DSo" secondAttribute="centerX" id="Epf-9D-rAl"/>
                                                 <constraint firstAttribute="bottom" secondItem="xhO-l4-Kly" secondAttribute="bottom" constant="16" id="L0X-xS-Wr4"/>
-                                                <constraint firstItem="xhO-l4-Kly" firstAttribute="top" secondItem="LSP-Pj-DSo" secondAttribute="bottom" constant="7.5" id="OHG-jY-mNk"/>
-                                                <constraint firstAttribute="trailing" secondItem="LSP-Pj-DSo" secondAttribute="trailing" constant="10" id="nqt-Lo-E3w"/>
-                                                <constraint firstItem="LSP-Pj-DSo" firstAttribute="top" secondItem="CTR-dz-dc0" secondAttribute="top" id="qYz-uC-jvh"/>
+                                                <constraint firstItem="8l1-YH-hpa" firstAttribute="centerX" secondItem="LSP-Pj-DSo" secondAttribute="centerX" id="kJY-WX-vJV"/>
                                                 <constraint firstAttribute="trailing" secondItem="xhO-l4-Kly" secondAttribute="trailing" constant="16" id="s7l-H3-uBE"/>
+                                                <constraint firstItem="LSP-Pj-DSo" firstAttribute="leading" secondItem="CTR-dz-dc0" secondAttribute="leading" id="sNg-z1-6C6"/>
+                                                <constraint firstItem="LSP-Pj-DSo" firstAttribute="top" secondItem="CTR-dz-dc0" secondAttribute="top" id="ts4-KY-SH9"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="375" height="473"/>
@@ -724,7 +724,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1J7-jl-6vL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9807" y="-646"/>
+            <point key="canvasLocation" x="9473" y="-260"/>
         </scene>
         <!--Setting -->
         <scene sceneID="Kub-6u-4f7">
@@ -991,13 +991,17 @@
                                     <action selector="signUpTapped:" destination="v7s-3t-3D8" eventType="touchUpInside" id="0Gp-RV-gli"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i8X-kU-se6" userLabel="Passsword Text Field">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i8X-kU-se6" userLabel="Passsword Text Field" customClass="MainTF" customModule="Part_time_job" customModuleProvider="target">
                                 <rect key="frame" x="50" y="391.5" width="275" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Av4-AH-UoE"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="withBorder" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isPasswordTF" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="erorr" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E2X-ll-Bkh">
                                 <rect key="frame" x="50" y="549" width="275" height="75"/>
@@ -1165,7 +1169,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yHo-D5-30O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="10468.115942028986" y="-1041.2946428571429"/>
+            <point key="canvasLocation" x="10361" y="-1004"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="icI-vb-t9t">
@@ -1498,7 +1502,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="173-RV-cLw">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="OIb-dC-c71"/>
-                        <barButtonItem key="rightBarButtonItem" title="log out" id="Dms-Pj-YuD">
+                        <barButtonItem key="rightBarButtonItem" title="Sign out" id="Dms-Pj-YuD">
                             <connections>
                                 <action selector="logOutPressed:" destination="5k1-ai-wcg" id="F4S-SA-OMf"/>
                             </connections>
@@ -1849,7 +1853,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6bK-SP-L6z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6975.1999999999998" y="-265.81709145427288"/>
+            <point key="canvasLocation" x="6764" y="-41"/>
         </scene>
         <!--Edit User ProfileVC-->
         <scene sceneID="iyC-BC-yXg">
@@ -2067,7 +2071,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Np1-FQ-val" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="gx4-lP-uAA" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="9081" y="-476"/>
+            <point key="canvasLocation" x="10361" y="151"/>
         </scene>
         <!--Notafciton-->
         <scene sceneID="Yb3-FW-oR3">
@@ -2086,6 +2090,11 @@
             <point key="canvasLocation" x="12600" y="-816"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="i8X-kU-se6">
+            <size key="intrinsicContentSize" width="141.5" height="21"/>
+        </designable>
+    </designables>
     <inferredMetricsTieBreakers>
         <segue reference="yyu-c5-43c"/>
     </inferredMetricsTieBreakers>
